Update sounds for 1.13.